调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -61,16 +61,17 @@
           </div>
        </div>
        <div class="con_gray">
-           <h2>我们要做的事</h2>
-           <h5>践行共享新模式 开创经济轻旅行</h5>
-           <div class="yz_left"> <img class="yz_left_img" src="{% static 'images/about/wm_yz.jpg' %}"></div>
-           <div class="yz_right">
+           <div class="yz_cont">
+                <h2>我们要做的事</h2>
+                <h5>践行共享新模式 开创经济轻旅行</h5>
+                <div class="yz_left"> <img class="yz_left_img" src="{% static 'images/about/wm_yz.jpg' %}"></div>
+                <div class="yz_right">
                方便在景点游玩有拍照欲望，却没有或忘带自拍杆的用户。<br>
 通过手机扫码，便捷的租借共享的方式便捷的用自拍杆，在就近机柜归还自拍杆。<br>
 实现轻装旅行，随时自拍，并解决手机应急充电的问题。<br>
 以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备。
-           </div>
-
+                </div>
+            </div>
        </div>
 
 
