--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,9 +95,9 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 .qy_img_text{width: 100%;height: 30px;line-height: 30px; background-color:rgba(255,255,255,0.5);text-align: center;font-size: 14px;color: #333333;margin-top: 80px;}
 
 .yz_cont{width: 80%; height: 400px; margin: 0 auto;}
-.yz_left{float: left;width: 240px;height: 400px;margin-right: 60px;}
-.yz_left_img{width: 240px;height:auto;border: none;}
-.yz_right{float: left;width: 60%;height: 400px;text-align: left;font-size: 14px;line-height: 28px;color: #666666;}
+.yz_left{float: left;width: 40%;height: 400px;margin-right: 20px;text-align: center;}
+.yz_left_img{width: 200px;height:auto;border: none;}
+.yz_right{float: left;width: 50%;height: 400px;text-align: left;font-size: 14px;line-height: 28px;color: #666666;}
 
 
 
