--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,10 +94,10 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 .qy_bg4{background-size:100% 100%; background: url("/static/images/about/qy_sheying.jpg") center no-repeat;}
 .qy_img_text{width: 100%;height: 30px;line-height: 30px; background-color:rgba(255,255,255,0.5);text-align: center;font-size: 14px;color: #333333;margin-top: 80px;}
 
-.yz_cont{width: 80%; height: 400px; margin: 0 auto;}
-.yz_left{float: left;width: 40%;height: 400px;margin-right: 20px;text-align: center;}
-.yz_left_img{width: 200px;height:auto;border: none;}
-.yz_right{float: left;width: 50%;height: 400px;text-align: left;font-size: 14px;line-height: 28px;color: #666666;}
+.yz_cont{width: 80%; height: 300px; margin: 0 auto;}
+.yz_left{float: left;width: 40%;height:100%;margin-right: 30px;text-align: right;}
+.yz_left_img{width: 180px;height:auto;border: none;}
+.yz_right{float: left;width: 50%;height:100%;text-align: left;font-size: 14px;line-height: 28px;color: #666666;}
 
 
 
