--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,8 +96,8 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 
 .yz_cont{width: 80%; height: 300px; margin: 0 auto;}
 .yz_left{float: left;width: 45%;height:100%;margin-right:10%;text-align:right;}
-.yz_left_img{width: 160px;height:auto;border: none;}
-.yz_right{float: left;width: 45%;height:100%;text-align: left;font-size: 14px;line-height: 30px;color: #333333;}
+.yz_left_img{width: 170px;height:auto;border: none;}
+.yz_right{float: left;width: 45%;height:100%;text-align: left;font-size: 14px;line-height: 30px;color: #333333;padding-top: 30px;}
 
 
 
