--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -67,10 +67,10 @@
                 <div class="yz_left"> <img class="yz_left_img" src="{% static 'images/about/wm_yz.jpg' %}"></div>
                 <div class="yz_right">
                帮助在景点游玩有拍照欲望，却没有或忘带自拍杆的用户<br>
-通过手机扫码，便捷的租借自拍杆，用好可在就近机柜归还<br>
-实现轻装旅行，随时自拍，自拍杆集成了充电宝，可解决手机应急充电的问题<br>
-                    供用户在景点景区自拍或摄影，提供方便并保障手机电力充足<br>
-以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备～
+通过手机扫码即可租借自拍杆，用好可在就近机柜归还，实现用户轻装出游随手自拍<br>
+自拍杆集成了充电宝，服务游客在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
+以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备<br>
+                    最终通过互联网和智能硬件技术，结合共享模式，打造新的轻旅游模式～
                 </div>
             </div>
        </div>
