调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -70,7 +70,7 @@
 通过手机扫码即可租借<span class="ystc">自拍杆</span>，用好可在就近机柜归还，实现用户轻装出游随手自拍<br>
 自拍杆集成了<span class="ystc">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
 以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备<br>
-                    最终通过互联网和智能硬件技术，结合<span class="ystc">共享模式</span>，打造新的<span class="ystc">轻旅游</span>方式～
+                    愿景是通过互联网和智能硬件技术，结合<span class="ystc">共享模式</span>，打造新的<span class="ystc">轻旅游</span>方式～
                 </div>
             </div>
        </div>
