调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -80,7 +80,7 @@
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/paizhao.png' %}"></div>
            <h6>消费升级</h6>
-           <div class="home_ys_sm">消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。影</div>
+           <div class="home_ys_sm">消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。</div>
        </div>
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/shengxin.png' %}"></div>
@@ -92,49 +92,6 @@
            <h6>供给侧改革</h6>
            <div class="home_ys_sm">共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。</div>
        </div>
-    </div>
-
-
-    <div class="cont_big hig_story">
-        <div class="head3">源自有遗憾的出游</div>
-        <img class="about_story_img" src="{% static 'images/about/sad.png' %}">
-        <div class="about_story_cont">
-            端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
-            可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
-            大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的满意又不好意思让人反复拍。<br>
-            结果这次难得的全家出游，没有合影照片记录...<br>
-            <span class="col"> 于是想，如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
-            就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。这多省事多方便！</span>
-        </div>
-    </div>
-    <div class="about_fg"></div>
-    <div class="cont_big hig_yz">
-        <div class="head3">我们要做的事</div>
-        <img class="about_story_img" src="{% static 'images/about/jiejue.png' %}">
-        <div class="about_story_cont">
-            方便在景点游玩有拍照欲望，却没有或忘带自拍杆的用户。<br>
-通过手机扫码，便捷的租借共享的方式便捷的用自拍杆，在就近机柜归还自拍杆。<br>
-实现轻装旅行，随时自拍，并解决手机应急充电的问题。<br>
-以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备。
-        </div>
-    </div>
-    <div class="cont_big_gra hig_jx">
-
-    <div class="about_jx">
-        <div class="head_jx">我们坚信共享是未来</div>
-        <div class="about_jx_con bo_right">
-            <div class="col">消费升级</div>
-            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。
-        </div>
-        <div class="about_jx_con bo_right">
-            <div class="col">精神文化发展</div>
-            物品已不再是财富和地方的象征，更在乎的是物品使用而非占有，共享是最好的方式。共享是低碳和经济行为，且减少闲置。
-        </div>
-        <div class="about_jx_con">
-            <div class="col">供给侧改革</div>
-            共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。
-        </div>
-    </div>
     </div>
 
 {% endblock %}
