调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,8 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 .yz_right{float: left;width: 65%;height:100%;text-align: left;font-size: 14px;line-height: 32px;padding-top: 40px;color: #666666}
 .ystc{color: #cc3399;font-weight: bold;}
 
+.jx_hight{height: 400px;}
+
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
 .star a{text-decoration: none;color: white;}
