调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -28,7 +28,7 @@
 </div>
         <div class="wm_slogn">
             <h1>践行共享新模式 开创经济轻旅行</h1>
-            <h4>轻拍科技帮您放在沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光吧</h4>
+            <h4>轻拍科技帮您释放沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光吧</h4>
         </div>
     </div>
        <div class="con_white">
@@ -74,7 +74,7 @@
                 </div>
             </div>
        </div>
-       <div class="con_white">
+       <div class="con_white jx_hight">
        <h2>我们坚信共享是未来</h2>
         <h5 class="icon_h5">践行共享新模式 开创经济轻旅行</h5>
        <div class="home_ys icon_ys">
