调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bottom: 20px;}
 
 
-.con_white{width: 80%;margin: 40px auto;text-align: center;}
+.con_white{width: 80%;margin: 40px auto;text-align: center;padding-top: 20px;}
 .con_gray{width: 100%;background-color: #f6f6f6;clear: both;padding-top:30px; padding-bottom: 30px;}
 
 .home_ys{float: left;width:31%;height: 380px;margin-right: 3%; text-align: center;}
