调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -85,7 +85,7 @@
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/ditan.png' %}"></div>
            <h6>共享 = 低碳</h6>
-           <div class="home_ys_sm">共享不是省钱，而是一种经济低碳的行为，为人类为全球环境气候改善做了贡献</div>
+           <div class="home_ys_sm">共享不是省钱，而是一种经济低碳的行为，为全球环境气候改善做贡献</div>
        </div>
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/fuyu.png' %}"></div>
