--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -78,17 +78,17 @@
        <h2>我们坚信共享是未来</h2>
         <h5 class="icon_h5">践行共享新模式 开创经济轻旅行</h5>
        <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/paizhao.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
            <h6>消费升级</h6>
            <div class="home_ys_sm">消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。</div>
        </div>
        <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/shengxin.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/jingshen.png' %}"></div>
            <h6>精神文化发展</h6>
            <div class="home_ys_sm">物品已不再是财富和地方的象征，更在乎的是物品使用而非占有，共享是最好的方式。共享是低碳和经济行为，且减少闲置。</div>
        </div>
        <div class="home_ys icon_ys_right">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/bianjie.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/gongjice.png' %}"></div>
            <h6>供给侧改革</h6>
            <div class="home_ys_sm">共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。</div>
        </div>
