--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -27,7 +27,7 @@
                 </li>
             </ul>
         </div>
-          <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+          <div class="star"><a href="#bottom" title="立即体验">立即体验</a></div>
 </div>
         <div class="home_slogn">
             <h1>轻生活 轻旅行 嗨自拍</h1>
