--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
 {% block content %}
 {% endblock %}
-<div class="con_gray">
+<div id＝bottom class="con_gray">
   <div class="foot_con">
     <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>微信公众号即将推出</div>
     <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信小程序"/>微信小程序即将推出</div>
