调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </div>
-          <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+          <div class="star"><a href="javascript:void(0);" onclick="javascript:document.getElementsByTagName('BODY')[0].scrollTop=document.getElementsByTagName('BODY')[0].scrollHeight;" title="立即体验">立即体验</a></div>
 </div>
         <div class="wm_slogn">
             <h1>践行共享新模式 开创经济轻旅行</h1>
