--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
         </div>
-          <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+          <div class="star"><a href="javascript:void(0);" onclick="javascript:document.getElementsByTagName('BODY')[0].scrollTop=document.getElementsByTagName('BODY')[0].scrollHeight;" title="立即体验">立即体验</a></div>
 </div>
         <div class="cp_slogn">
             <h1>随用随借 随借随还</h1>
