调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -52,7 +52,7 @@
             </div>
             <div class="cp_lc_li cp_lc_li_right">
                 <h6>第四步</h6>
-                <div class="cp_lc_sm">随处可还，付几块钱</div>
+                <div class="cp_lc_sm">随处可还，便捷低价</div>
             </div>
        </div>
     </div>
