调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,9 +126,10 @@ body a { color: black; text-decoration: none; }
     color: #666666;
    }
 .foot_con_img {
-    width: 140px;
-    height: 140px;
+    width: 120px;
+    height: 120px;
     border: none;
+    padding: 10px;
    }
 .foot_cont_bq{
     clear: both;
