--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -14,10 +14,10 @@
           <div class="navigation">
             <ul class="menu">
                 <li>
-                    <a href="/home"><span class="menutitle">首页</span></a>
+                    <a href="/home/"><span class="menutitle">首页</span></a>
                 </li>
                 <li>
-                    <a href="/home/ownpic"><span class="menutitle">自拍神器</span></a>
+                    <a href="/home/ownpic/"><span class="menutitle">自拍神器</span></a>
                 </li>
                 <li>
                     <span class="crunt">关于我们</span>
