--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -18,11 +18,11 @@
                     <span class="crunt">首页</span>
                 </li>
                 <li>
-                    <a href="/home/ownpic"><span class="menutitle">自拍神器</span><span
+                    <a href="/home/ownpic/"><span class="menutitle">自拍神器</span><span
                             class="menudesc"></span></a>
                 </li>
                 <li>
-                    <a href="/home/about"><span class="menutitle">关于我们</span><span
+                    <a href="/home/about/"><span class="menutitle">关于我们</span><span
                             class="menudesc"></span></a>
                 </li>
             </ul>
