--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 </div>
 </div>
   <div class="foot_cont_bq">
-    杭州轻拍科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyright@2017 浙ICP备17029716号-1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;沟通邮箱：fk@relalive.com
+    杭州轻拍科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyright@2017 浙ICP备17029716号-1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;沟通邮箱：kf@relalive.com
 </div>
 
 </body>
