update the slogon

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -30,7 +30,7 @@
           <div class="star"><a href="javascript:void(0);" onclick="javascript:document.getElementsByTagName('BODY')[0].scrollTop=document.getElementsByTagName('BODY')[0].scrollHeight;" title="立即体验">立即体验</a></div>
 </div>
         <div class="home_slogn">
-            <h1>共享让出游变得简单</h1>
+            <h1>共享让出游变得轻松</h1>
             <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
         </div>
     </div>
