--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -8,8 +8,8 @@
         .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
     </style>
     <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>附近自拍杆</span>
+        <div class="div-back"><a href="/weixin/privatecenter/"></a></div>
+        <span></span>
     </div>
 
 {% endblock %}
@@ -28,41 +28,35 @@
     <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
     <script>
         function initMap(){
-            createMap();//创建地图
-            setMapEvent();//设置地图事件
-            addMapControl();//向地图添加控件
+            createMap();
+            setMapEvent();
+            addMapControl();
         }
 
-        //创建地图函数：
         function createMap(){
-            var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-            var point = new BMap.Point(113.116257,27.822879);//定义一个中心点坐标
-            map.centerAndZoom(point,17);//设定地图的中心点和坐标并将地图显示在地图容器中
-            window.map = map;//将map变量存储在全局
+            var map = new BMap.Map("dituContent");
+            var point = new BMap.Point(113.116257,27.822879);
+            map.centerAndZoom(point,17);
+            window.map = map;
         }
 
-        //地图事件设置函数：
         function setMapEvent(){
-            map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
-            map.enableScrollWheelZoom();//启用地图滚轮放大缩小
-            map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
-            map.enableKeyboard();//启用键盘上下左右键移动地图
+            map.enableDragging();
+            map.enableScrollWheelZoom();
+            map.enableDoubleClickZoom();
+            map.enableKeyboard();
         }
 
-        //地图控件添加函数：
         function addMapControl(){
-            //向地图中添加缩放控件
             var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
             map.addControl(ctrl_nav);
-            //向地图中添加缩略图控件
             var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
             map.addControl(ctrl_ove);
-            //向地图中添加比例尺控件
             var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
             map.addControl(ctrl_sca);
         }
 
-        initMap();//创建和初始化地图
+        initMap();
     </script>
 
 {% endblock %}
