--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="div-content">
-        <input type="button" value="借自拍(嗨)杆">
+        <input type="button" id='scanQRCode' value="借自拍(嗨)杆">
         <h5>计费规则</h5>
         <span>1.1小时内免费，之后1元/小时，每天5元封顶；</span><br>
         <span>2.如5天未归还，默认购买此自拍杆，系统将您押金改为购物款并自动收取；</span><br>
@@ -19,6 +19,53 @@
 
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script>
+        $.ajax({
+            type:"post",
+            url:"wxconfig",//自己填写请求地址
+            data:{},
+            success:function(result){
+                wx.config({
+                // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                debug: false,
+                // 必填，公众号的唯一标识
+                appId: result.appId,
+                // 必填，生成签名的时间戳
+                timestamp:""+result.timestamp,
+                // 必填，生成签名的随机串
+                nonceStr:result.noncestr,
+                 // 必填，签名，见附录1
+                 signature:result.signature,
+                 // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+                 jsApiList : [ 'checkJsApi', 'scanQRCode' ]
+                 });
+              }
+        });
+
+        wx.error(function(res) {
+            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
+        });
+
+        wx.ready(function() {
+            wx.checkJsApi({
+                 jsApiList : ['scanQRCode'],
+                 success : function(res) {
+
+                 }
+            });
+
+            //点击按钮扫描二维码
+            document.querySelector('#scanQRCode').onclick = function() {
+                wx.scanQRCode({
+                    needResult : 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+                    scanType : [ "qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
+                    success : function(res) {
+                    var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                     window.location.href = result;//因为我这边是扫描后有个链接，然后跳转到该页面
+                    }
+                });
+            };
+
+        });
 
     </script>
 {% endblock %}
