--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -17,24 +17,30 @@
         <span>1.首次借用需支付49元押金，归还自拍杆后，随时到个人中心快捷提现退还押金。</span>
     </div>
 
-    <script src="/static/js/jquery-3.2.1.js"></script>
+    <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
+    <script src="{% static '/js/jweixin-1.2.0.js' %}"></script>
     <script>
+        $.ajaxSetup({data: {
+            csrfmiddlewaretoken: '{{ csrf_token }}'
+        }});
+
         $.ajax({
             type:"post",
-            url:"wxconfig",//自己填写请求地址
+            url:"/weixin/wxconfig/",//自己填写请求地址
             data:{},
             success:function(result){
+                var res = JSON.parse(result);
                 wx.config({
                 // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
                 debug: false,
                 // 必填，公众号的唯一标识
-                appId: result.appId,
+                appId: res.appId,
                 // 必填，生成签名的时间戳
-                timestamp:""+result.timestamp,
+                timestamp:""+res.timestamp,
                 // 必填，生成签名的随机串
-                nonceStr:result.noncestr,
+                nonceStr:res.nonceStr,
                  // 必填，签名，见附录1
-                 signature:result.signature,
+                 signature:res.signature,
                  // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
                  jsApiList : [ 'checkJsApi', 'scanQRCode' ]
                  });
@@ -47,25 +53,27 @@
 
         wx.ready(function() {
             wx.checkJsApi({
-                 jsApiList : ['scanQRCode'],
-                 success : function(res) {
+                jsApiList: ['scanQRCode'],
+                success: function (res) {
 
-                 }
+                }
             });
 
             //点击按钮扫描二维码
-            document.querySelector('#scanQRCode').onclick = function() {
+            document.querySelector('#scanQRCode').onclick = function () {
                 wx.scanQRCode({
-                    needResult : 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
-                    scanType : [ "qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
-                    success : function(res) {
-                    var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
-                     window.location.href = result;//因为我这边是扫描后有个链接，然后跳转到该页面
+                    needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+                    scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
+                    success: function (res) {
+                        {#                        var result1 = res.resultStr; // 当needResult 为 1 时，扫码返回的结果#}
+                        alert('1');
+                        {#                        window.location.href = result;//因为我这边是扫描后有个链接，然后跳转到该页面#}
                     }
                 });
             };
-
         });
+
+
 
     </script>
 {% endblock %}
