--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -42,7 +42,7 @@
                  // 必填，签名，见附录1
                  signature:res.signature,
                  // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
-                 jsApiList : [ 'scanQRCode' ]
+                 jsApiList : [ 'checkJsApi', 'scanQRCode' ]
                  });
               }
         });
@@ -55,16 +55,15 @@
             wx.checkJsApi({
                 jsApiList: ['scanQRCode'],
                 success: function (res) {
-                    alert('5');
+
                 }
             });
 
             //点击按钮扫描二维码
             document.querySelector('#scanQRCode').onclick = function () {
-                alert('0');
                 wx.scanQRCode({
                     needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
-                    desc: 'scanQRCode desc', // 可以指定扫二维码还是一维码，默认二者都有
+                    scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
                     success: function (res) {
                         {#                        var result1 = res.resultStr; // 当needResult 为 1 时，扫码返回的结果#}
                         alert('1');
