--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -29,6 +29,7 @@
             url:"/weixin/wxconfig/",//自己填写请求地址
             data:{},
             success:function(result){
+                alert(result);
                 var res = JSON.parse(result);
                 wx.config({
                 // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
@@ -47,15 +48,17 @@
               }
         });
 
-        wx.error(function(res) {
-            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
-        });
+{#        wx.error(function(res) {#}
+{#            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。#}
+{#        });#}
 
-        wx.ready(function() {
+        wxJSSDK.ready(function() {
+            debugger
+            alert('10');
             wx.checkJsApi({
                 jsApiList: ['scanQRCode'],
                 success: function (res) {
-
+                    alert(res);
                 }
             });
 
