--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -15,7 +15,7 @@
         <br>
 
         <span>
-            <a href="">租借记录({{ lendtime }}次)&gt;</a>
+            <a href="/weixin/lendhistory/">租借记录({{ lendtime }}次)&gt;</a>
         </span>
         <br>
         <span>
