--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -32,7 +32,7 @@
                 var res = JSON.parse(result);
                 wx.config({
                     // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-                    debug: false,
+                    debug: true,
                     // 必填，公众号的唯一标识
                     appId: res.appId,
                     // 必填，生成签名的时间戳
@@ -56,6 +56,7 @@
             wx.checkJsApi({
                 jsApiList: ['scanQRCode'],
                 success: function (res) {
+                    alert('3');
                     alert(res);
                 }
             });
@@ -67,6 +68,7 @@
                     needResult: 0, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
                     scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
                     success: function (res) {
+                        alert('2');
                         var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
                     }
                 });
