--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -33,7 +33,7 @@
                 var res = JSON.parse(result);
                 wx.config({
                     // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-                    debug: true,
+                    debug: false,
                     // 必填，公众号的唯一标识
                     appId: res.appId,
                     // 必填，生成签名的时间戳
