--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -47,9 +47,9 @@
               }
         });
 
-{#        wx.error(function(res) {#}
-{#            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。#}
-{#        });#}
+        wx.error(function(res) {
+            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
+        });
 
         wx.ready(function() {
             alert('10');
