官网更新名称

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -316,5 +316,5 @@ input.weui-btn_plain-default{
   font-size:13px;
 }
 
-.ts_cont{width: 100%;height: 400px;float: left;text-align: center;}
+.ts_cont{width: 100%;height: auto;float: left;text-align: center;}
 .zgjs{width: 380px;height: 380px;margin: 40px auto;background: url("/static/images/weixin/zgjs.gif") center no-repeat;}
