--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -24,14 +24,8 @@
             csrfmiddlewaretoken: '{{ csrf_token }}'
         }});
 
-
-
-        wx.error(function(res) {
-            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
-        });
-
-        wx.ready(function() {
-
+        $(document).ready(function () {
+            alert('mm');
             $.ajax({
                 type:"post",
                 url:"/weixin/wxconfig/",//自己填写请求地址
@@ -54,7 +48,15 @@
                      });
                   }
             });
+        });
 
+
+
+        wx.error(function(res) {
+            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
+        });
+
+        wx.ready(function() {
             alert('10');
             wx.checkJsApi({  
          jsApiList : ['scanQRCode'],  
