--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -3,13 +3,14 @@
 
 {% block head %}
     <div class="weixin-title">
-        <span>轻拍</span>
+        <span>茄子自拍</span>
     </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
+    <div class="ts_cont">
+        <div class="zgjs"></div>
         <input type="button" id='scanQRCode' value="借自拍(嗨)杆">
         <h5>计费规则</h5>
         <span>1.1小时内免费，之后1元/小时，每天5元封顶；</span><br>
