官网更新名称

--- a/templates/weixin/base.html
+++ b/templates/weixin/base.html
@@ -9,6 +9,7 @@
         <link href="{% static '/css/weixin.css' %}" rel="stylesheet" type="text/css"/>
         {% block head %}
         {% endblock %}
+        <title>茄子自拍-{% block title %}{% endblock %}</title>
     </head>
     <body>
 
