官网更新名称

--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -1,10 +1,7 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}茄子自拍{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <span>茄子自拍</span>
-    </div>
 
 {% endblock %}
 
