--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -60,7 +60,8 @@
             alert('10');
             wx.checkJsApi({  
          jsApiList : ['scanQRCode'],  
-         success : function(res) {
+         success:function(res) {
+                    alert('relalive test ' + res);
          }  
       }); 
 
