--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -204,7 +204,7 @@ a{
 }
 .weui-btn_default{
   color:#000000;
-  background-color:#F8F8F8;
+  background-color:#cc0099;
 }
 .weui-btn_default:not(.weui-btn_disabled):visited{
   color:#000000;
