--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="ts_cont">
         <div class="zgjs"></div>
-        <input type="button" id='scanQRCode' value="借自拍(嗨)杆">
+        <input type="button" id='scanQRCode' value="借自拍(嗨)杆" class="weui-btn_default">
         <h5>计费规则</h5>
         <span>1.1小时内免费，之后1元/小时，每天5元封顶；</span><br>
         <span>2.如5天未归还，默认购买此自拍杆，系统将您押金改为购物款并自动收取；</span><br>
