官网更新名称

--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -8,9 +8,8 @@
 {% block content %}
     <div class="ts_cont">
         <div class="zgjs"></div>
-        <div class="weui-btn"> <a href="javascript:;"  onclick="sends.conform();">借自拍杆</a></div>
         <a href="javascript:;" class="weui-btn weui-btn_primary">借自拍杆</a>
-
+        <div class="ts_til"><div class="ts_til_test">计费规则</div> </div>
         <h5>计费规则</h5>
         <span>1.1小时内免费，之后1元/小时，每天5元封顶；</span><br>
         <span>2.如5天未归还，默认购买此自拍杆，系统将您押金改为购物款并自动收取；</span><br>
