--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -318,5 +318,5 @@ input.weui-btn_plain-default{
 
 .ts_cont{width: 100%;height: 460px;float: left;text-align: center;}
 .zgjs{width: 380px;height: 380px;margin: 40px auto;background: url("/static/images/weixin/zgjs.gif") center no-repeat;}
-.ts_til{width: 90%;float: left;margin: 40px auto;border-bottom: 1px dashed #ececec;color:#666666;}
+.ts_til{width: auto;margin: 40px auto;border-bottom: 1px dashed #ececec;color:#666666;padding: 15px;}
 .ts_til_test{width: 100%;text-align: center;margin-bottom: -10px;position: relative;padding: 5px;}
