--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -8,13 +8,15 @@
 {% block content %}
     <div class="ts_cont">
         <div class="zgjs"></div>
-        <a href="javascript:;" class="weui-btn weui-btn_primary page__bd_spacing">借自拍杆</a>
-        <div class="ts_til page__bd_spacing"><div class="ts_til_test">计费规则</div> </div>
-        <h5>计费规则</h5>
-        <span>1.1小时内免费，之后1元/小时，每天5元封顶；</span><br>
-        <span>2.如5天未归还，默认购买此自拍杆，系统将您押金改为购物款并自动收取；</span><br>
-        <span>1.首次借用需支付49元押金，归还自拍杆后，随时到个人中心快捷提现退还押金。</span>
     </div>
+    <div class="nr_con">
+            <a href="javascript:;" class="weui-btn weui-btn_primary page__bd_spacing">借自拍杆</a>
+            <div class="ts_til page__bd_spacing"><div class="ts_til_test">计费规则</div> </div>
+            <h5>计费规则</h5>
+            <span>1.1小时内免费，之后1元/小时，每天5元封顶；</span><br>
+            <span>2.如5天未归还，默认购买此自拍杆，系统将您押金改为购物款并自动收取；</span><br>
+            <span>1.首次借用需支付49元押金，归还自拍杆后，随时到个人中心快捷提现退还押金。</span>
+     </div>
 
     <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
     <script src="{% static '/js/jweixin-1.2.0.js' %}"></script>
