--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -318,6 +318,6 @@ input.weui-btn_plain-default{
 
 .ts_cont{width: 100%;height: 460px;float: left;text-align: center;}
 .zgjs{width: 380px;height: 380px;margin: 40px auto;background: url("/static/images/weixin/zgjs.gif") center no-repeat;}
-.nr_con{width: 100%;padding: 0 15px;}
+.nr_con{padding: 0 15px;}
 .ts_til{width: 100%;margin: 40px auto;border-bottom: 1px dashed #ececec;color:#666666;}
 .ts_til_test{width: 100%;text-align: center;margin-bottom: -10px;position: relative;}
