--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -320,4 +320,4 @@ input.weui-btn_plain-default{
 .zgjs{width: 380px;height: 380px;margin: 40px auto;background: url("/static/images/weixin/zgjs.gif") center no-repeat;}
 .nr_con{padding: 0 15px;}
 .ts_til{width: 100%;margin: 40px auto;border-bottom: 1px dashed #ececec;color:#666666;}
-.ts_til_test{width: 100%;text-align: center;margin-bottom: -10px;position: relative;}
+.ts_til_test{width: 100px;text-align: center;margin-bottom: -10px;position: relative;padding: 5px;background-color: white;}
