--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -214,14 +214,14 @@ a{
   background-color:#DEDEDE;
 }
 .weui-btn_primary{
-  background-color:#F8F8F8;
+  background-color:#1AAD19;
 }
 .weui-btn_primary:not(.weui-btn_disabled):visited{
   color:#FFFFFF;
 }
 .weui-btn_primary:not(.weui-btn_disabled):active{
   color:rgba(255, 255, 255, 0.6);
-  background-color:#DEDEDE;
+  background-color:#179B16;
 }
 .weui-btn_warn{
   background-color:#E64340;
