--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -1,17 +1,15 @@
 {% extends "weixin/base.html" %}
 {% load static %}
+{% block title %}租借记录{% endblock %}
 
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>租借记录</span>
-    </div>
+
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>您共有{{ lendtime }}次租借，全球排名{{ lendindex }}位</span>
+    <div class="nr_con">
+        <div class="tj_til"> 您共有<span class="col_z">{{ lendtime }}</span>次租借，全球排名{{ lendindex }}位</div>
         {% if lendhistory %}
             {% for history in lendhistory %}
                 <table>
