官网更新名称

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -325,4 +325,4 @@ input.weui-btn_plain-default{
 .sm_cont{width: 100%;float:left;color: #666666;line-height: 30px;}
 .col_z{color: #cc0099;font-weight:bold;}
 
-.tj_til{width: 100%;height: 50px;line-height: 50px;text-align: center;color: #333333;}
+.tj_til{width: 100%;height: 50px;line-height: 50px;text-align: center;color: #333333;background-color: white;}
