--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -327,6 +327,7 @@ input.weui-btn_plain-default{
 .tj_til{width: 100%;height: 50px;line-height: 50px;text-align: center;color: #333333;}
 .zjjl_con{width: 100%;border-top: 1px solid #ececec;border-bottom: 1px solid #ececec;margin-bottom: 30px;background-color: white;color: #666666;}
 .zjjl_h{padding: 10px 15px;border-bottom: 1px solid #eeeeee;height: 30px;line-height: 30px;}
+.zjjl_h_bot{height: 70px;}
 .zjjl_dd{width: 60%;float:left;text-align: left;height: 30px;line-height: 30px;}
 .zjjl_zt{width: 30%;float: right;text-align: right;color: #333333;}
 .zjjl_tf{width: 40%;float: left;color: #333333;text-align: left;}
