官网更新名称

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -332,7 +332,7 @@ input.weui-btn_plain-default{
 .zjjl_dd{width: 60%;float:left;text-align: left;height: 30px;line-height: 30px;}
 .zjjl_zt{width: 30%;float: right;text-align: right;color: #333333;}
 .zjjl_tf{width: 40%;float: left;color: #333333;text-align: left;}
-.zjjl_zj{width: 100%;float:left;line-height: 30px;text-align: left;height: 50px;}
-.zjjl_icon{width: 30px;height:50px;float: left;margin-right: 10px;}
+.zjjl_zj{width: 100%;float:left;line-height: 20px;text-align: left;}
+.zjjl_icon{width: 30px;height:50px;float: left;margin:5px 10px 0 0;}
 .zjjl_icon_img{width: 20px;height: auto;border: none;}
 
