官网更新名称

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -16,8 +16,8 @@
                        <div class="zjjl_zt">已完成</div>
                    </div>
                    <div class="zjjl_h">
-                       <div class="zjjl_tf">用时：3时28分</div>
-                       <div class="zjjl_tf">费用：1元</div>
+                       <div class="zjjl_tf">用时：<span class="col_z">3时28分</span></div>
+                       <div class="zjjl_tf">费用：<span class="col_z">1元</span></div>
                    </div>
                    <div class="zjjl_h zjjl_h_zc">
                        <div class="zjjl_zj">
