--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -21,6 +21,8 @@
                    </div>
                    <div class="zjjl_h zjjl_h_zc">
                        <div class="zjjl_zj">
+                           <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="借出"/></div>
+                           还：2017/08/27  19:31:28<br>西江千户苗寨 西服务区售票大厅
                            <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"/></div>
                            租：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅
                        </div>
