--- a/templates/weixin/base.html
+++ b/templates/weixin/base.html
@@ -6,6 +6,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link href="{% static '/css/weixin.css' %}" rel="stylesheet" type="text/css"/>
         {% block head %}
         {% endblock %}
