--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -19,7 +19,7 @@
                        <div class="zjjl_tf">用时：<span class="col_z">3时28分</span></div>
                        <div class="zjjl_tf">费用：<span class="col_z">1元</span></div>
                    </div>
-                   <div class="zjjl_h zjjl_h_hr">
+                   <div class="zjjl_h zjjl_h_zc">
 
                        <div class="zjjl_zj">
                            <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
@@ -38,8 +38,8 @@
                    </div>
                    <div class="zjjl_h zjjl_h_hr">
 
-                           <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
-                           租：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
+                           <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="借出"></div>
+                           还：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
                             <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
                            租：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
 
