官网更新名称

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -335,4 +335,5 @@ input.weui-btn_plain-default{
 .zjjl_zj{width: 100%;float:left;line-height: 26px;text-align: left;height: 70px;}
 .zjjl_icon{width: 20px;height:60px;float: left;margin:4px 10px 0 0;}
 .zjjl_icon_img{width: 20px;height: auto;border: none;}
-
+.zt_jxz{color:#179B16;}
+.zt_zgm{color:#CE3C39;}
