官网更新名称

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -27,6 +27,23 @@
                        </div>
                    </div>
         </div>
+         <div class="zjjl_con">
+                   <div class="zjjl_h">
+                       <div class="zjjl_dd">订单号：19002017082888901253</div>
+                       <div class="zjjl_zt zt_zgm">已购买</div>
+                   </div>
+                   <div class="zjjl_h">
+                       <div class="zjjl_tf">用时：<span class="col_z">超5天</span></div>
+                       <div class="zjjl_tf">费用：<span class="col_z">49元</span></div>
+                   </div>
+                   <div class="zjjl_h zjjl_h_zc">
+
+                       <div class="zjjl_zj">
+                           <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
+                           租：2017/08/22  18:30:28<br>西江千户苗寨 西服务区售票大厅
+                       </div>
+                   </div>
+        </div>
         <div class="zjjl_con">
                    <div class="zjjl_h">
                        <div class="zjjl_dd">订单号：19002017082888901253</div>
@@ -37,12 +54,10 @@
                        <div class="zjjl_tf">费用：<span class="col_z">1元</span></div>
                    </div>
                    <div class="zjjl_h zjjl_h_hr">
-
                            <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="借出"></div>
                            还：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
                             <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
                            租：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
-
                    </div>
         </div>
         {% if lendhistory %}
