官网更新名称

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -13,7 +13,7 @@
         <div class="zjjl_con">
                    <div class="zjjl_h">
                        <div class="zjjl_dd">订单号：19002017082888901253</div>
-                       <div class="zjjl_zt">已完成</div>
+                       <div class="zjjl_zt zt_jxz">进行中</div>
                    </div>
                    <div class="zjjl_h">
                        <div class="zjjl_tf">用时：<span class="col_z">3时28分</span></div>
