--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -86,7 +86,7 @@
 
             {% endfor %}
         {% else %}
-            <span>您竟然还没体验自拍神器，还等什么～<br><a href="">借自拍杆</a></span>
+            <div class="zjjl_con">您竟然还没体验自拍神器，还等什么～<br><a href="">借自拍杆</a></div>
         {% endif %}
 
     </div>
