微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -214,14 +214,14 @@ a{
   background-color:#DEDEDE;
 }
 .weui-btn_primary{
-  background-color:#1AAD19;
+  background-color:cc0099;
 }
 .weui-btn_primary:not(.weui-btn_disabled):visited{
   color:#FFFFFF;
 }
 .weui-btn_primary:not(.weui-btn_disabled):active{
   color:rgba(255, 255, 255, 0.6);
-  background-color:#179B16;
+  background-color:#cc3399;
 }
 .weui-btn_warn{
   background-color:#E64340;
