微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -214,7 +214,7 @@ a{
   background-color:#DEDEDE;
 }
 .weui-btn_primary{
-  background-color:cc0099;
+  background-color:#cc0099;
 }
 .weui-btn_primary:not(.weui-btn_disabled):visited{
   color:#FFFFFF;
