微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -318,7 +318,7 @@ input.weui-btn_plain-default{
 
 .ts_cont{width: 100%;height: auto;float: left;text-align: center;margin: 30px auto;}
 .zgjs_img{width: 60%;height: auto;}
-.nr_con{padding: 0 15px;font-weight: normal;}
+.nr_con{padding: 0 15px;font-weight: 200;}
 .nr_con_all{padding: 0;background-color:#DEDEDE}
 .ts_til{width: 100%;margin: 20px auto;border-bottom: 1px dashed #ececec;color:#999999;text-align: center;font-size: 14px;}
 .ts_til_test{width: 80px;text-align: center;margin-bottom: -18px;margin-left:auto;margin-right:auto;position: relative;padding: 5px;background-color: white;}
