微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -328,10 +328,10 @@ input.weui-btn_plain-default{
 .col_z{color: #cc0099;font-weight:bold;}
 .tj_til{width: 100%;height: 50px;line-height: 50px;text-align: center;color: #333333;}
 .zjjl_con{width: 100%;border-top: 1px solid #d2d2d2;border-bottom: 1px solid #d2d2d2;margin-bottom: 30px;background-color: white;color: #666666;}
-.zjjl_h{padding: 10px 15px;border-bottom: 1px solid #eeeeee;height: 30px;line-height: 30px;}
-.zjjl_h_zc{height: 70px;border-bottom: none;}
+.zjjl_h{padding: 10px 15px;border-bottom: 1px solid #f2f2f2;height: 28px;line-height: 28px;}
+.zjjl_h_zc{height: 60px;border-bottom: none;}
 .zjjl_h_hr{height: 120px;border-bottom: none;}
-.zjjl_dd{width: 80%;float:left;text-align: left;height: 30px;line-height: 30px;}
+.zjjl_dd{width: 80%;float:left;text-align: left;}
 .zjjl_zt{width: 20%;float: right;text-align: right;color: #333333;font-weight: bold;}
 .zjjl_tf{width: 40%;float: left;color: #333333;text-align: left;}
 .zjjl_zj{width: 100%;float:left;line-height: 26px;text-align: left;height: 70px;}
