微信公众号建设

--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -16,7 +16,7 @@
             </div>
        </div>
         {% if has_opacity %}
-            <div class="ts_cont">
+            <div class="ts_cont ts_cont_all">
                   <img class="zgjs_img" src="{% static '/images/weixin/cgts.gif' %}" alt="出杆提示">
             </div>
              <div class="nr_con">
