微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -1,16 +1,23 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}茄子自拍{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="">&lt;返回</a></div>
-        <span>轻拍</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
+    <div class="gr_cont">
+       <div class="gr_top">
+           <img class="gr_tx" src="{% static '/images/weixin/touxiang.jpg' %}" alt="微信头像">
+           <div class="gr_nc">reakyzhou</div>
+           于2017/08/29 11:20:38 在西江千户苗寨景区 成为轻拍一员<br>
+           <span class="col_z">自拍达人一枚，我自拍所以我存在</span>
+       </div>
+
+
+
+
+      <div class="div-content">
         <span>自拍达人一枚，我自拍所以我存在</span>
         <br>
 
@@ -25,8 +32,8 @@
         <span><a href="/weixin/use_help/">使用帮助&gt;</a></span>
         <br>
         <span><a href="/weixin/about/">关于我们&gt;</a></span>
+       </div>
     </div>
-
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script>
 
