微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -10,8 +10,8 @@
        <div class="gr_top">
            <img class="gr_tx" src="{% static '/images/weixin/touxiang.jpg' %}" alt="微信头像">
            <div class="gr_nc">reakyzhou</div>
-           于2017/08/29 11:20:38 在西江千户苗寨景区 成为轻拍一员<br>
-           <span class="col_z">自拍达人一枚，我自拍所以我存在</span>
+           于2017/08/29在西江千户苗寨景区成为轻拍一员<br>
+           <span class="col_z">自拍达人一枚，我拍故我在</span>
        </div>
 
 
