微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -14,7 +14,10 @@
            <span class="col_z">自拍达人一枚，我拍故我在</span>
        </div>
 
-
+        <div class="gr_dh">
+            <div class="gr_dh_left">租借记录(<span class="col_z">3</span>)</div>
+            <div class="gr_dh—_right"><img class="gr_tx" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
+        </div>
 
 
       <div class="div-content">
