微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -16,7 +16,7 @@
 
         <div class="gr_dh">
             <div class="gr_dh_left">租借记录(<span class="col_z">3</span>)</div>
-            <div class="gr_dh—_right"><img class="gr_tx" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
+            <div class="gr_dh—_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
         </div>
 
 
